--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
 
 	<properties>
 		<java.version>17</java.version>
+		<microsoft-azure-webapp-maven-plugin.version>2.8.0</microsoft-azure-webapp-maven-plugin.version>
 	</properties>
 
 	<dependencies>
@@ -35,12 +36,39 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>com.microsoft.azure</groupId>
+				<artifactId>azure-webapp-maven-plugin</artifactId>
+				<version>${microsoft-azure-webapp-maven-plugin.version}</version>
+				<configuration>
+					<schemaVersion>v2</schemaVersion>
+					<subscriptionId>fc1f3146-ead7-419e-a87e-d89292ae6a02</subscriptionId>
+					<resourceGroup>SpringAppsRxGrp</resourceGroup>
+					<appName>hello-spring-app</appName>
+					<pricingTier>F1</pricingTier>
+					<region>eastus</region>
+					<runtime>
+						<os>Linux</os>
+						<javaVersion>Java 17</javaVersion>
+						<webContainer>Java SE</webContainer>
+					</runtime>
+					<deployment>
+						<resources>
+							<resource>
+								<directory>${project.basedir}/target</directory>
+								<includes>
+									<include>*.jar</include>
+								</includes>
+							</resource>
+						</resources>
+					</deployment>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
